--- a/package.json
+++ b/package.json
@@ -29,11 +29,8 @@
     "url": "https://github.com/Sette0o0/AV1/issues"
   },
   "homepage": "https://github.com/Sette0o0/AV1#readme",
-  "dependencies": {
-    "tsc": "^2.0.4",
-    "typescript": "^5.9.3"
-  },
   "devDependencies": {
-    "@types/node": "^24.6.1"
+    "@types/node": "^24.6.1",
+    "typescript": "^5.9.3"
   }
 }
